Fixing bug 58874, making network works under BeOS.  r=valeski@netscape.com, r=matt@hottub.org, sr=mscott@netscape.com